Messages UI fix on mobile

--- a/src/app/components/main/messages/messages.responsive.scss
+++ b/src/app/components/main/messages/messages.responsive.scss
@@ -77,12 +77,17 @@
 				max-width: 800px;
 				.detail {
 					flex-grow: 1;
+					max-width: calc(100% - 115px);
 				}
 				.time {
 					display: flex;
 					align-items: flex-start;
-					font-size: 14px;
+					font-size: 10px;
 					opacity: 0.4;
+					img {
+						height: 12px;
+						width: 20px;
+					}
 				}
 				&.active {
 					background-color: #f2f6f8;
